# uaf_clearpath_ctrl_client

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_app.sh  build_urho3d.sh  deploy_app.sh  start_husky_sim.sh  start_jackal_sim.sh
deploy/: shell.html
deploy/CoreData/RenderPaths/: Forward.xml  ToolkitMain.xml  simple.xml
deploy/Data/Materials/: Dark.xml  DefaultMaterial.xml  Grey.xml  Yellow.xml  jackal_base.xml  jackal_bb2_01.xml  jackal_bb2_02.xml  jackal_fender.xml  local_costmap_billboard.xml  occ_billboard copy.xml  scan_billboard.xml
deploy/Data/Models/: husky_base_link.mdl  husky_bumper.mdl  husky_lidar_cross.mdl  husky_lidar_mount.mdl  husky_lidar_riser.mdl  husky_sensor_arch.mdl  husky_top_chassis.mdl  husky_top_plate.mdl  husky_top_plate_cover.mdl  husky_user_rail.mdl  husky_vlp_bottom.mdl  husky_vlp_middle.mdl  husky_vlp_top.mdl  husky_wheel.mdl  jackal-base.mdl  jackal-bridge-plate.mdl  jackal-bumblebee.mdl  jackal-bumblebee2.mdl  jackal-fender.mdl  jackal-fenders.mdl  jackal-sicklms-2.mdl  jackal-sicklms.mdl  jackal-standoff.mdl  jackal-wheel.mdl  jackal_base.mdl  novatel-smart6.mdl  sick-lms1xx-upright-bracket.mdl  stereo-camera-bracket.mdl
deploy/Data/UI/: DefaultStyle.xml  jackal_style.xml
doc/bullet_m2_router/backup_configs/: base_station_2.cfg
doc/project_proposal/: proposal.aux  proposal.fdb_latexmk  proposal.fls  proposal.tex
doc/project_report/: build_plots.m  outline.org  randle_ms_project_report.bib  randle_ms_project_report.org  title_page.odt
doc/project_report/images/: bullet_network_settings.kra  control_interface_overview.kra  control_observer_phone.kra  gmapping_graph.kra  message.kra  params.kra  rqt_graph.xcf  system_overview.kra  toolbar.kra  transform.kra  vip2_settings.kra
doc/project_report/sim_data/: cam_throttled_bandwidth.csv  change_map_server_data.csv  raw_map_server_data.csv  run_bw_sim.sh
import/: jackal_base.dae
import/husky/: lidar_cross.stl  lidar_riser.stl
import/jackal/: jackal_bumblebee.STL  standoff.stl
src/: CMakeLists.txt  animated_panel.cpp  animated_panel.h  camera.cpp  camera.h  input.cpp  input.h  jackal_control.cpp  jackal_control.h  joystick.cpp  joystick.h  logging.cpp  logging.h  map_toggle_views.cpp  map_toggle_views.h  mapping.cpp  mapping.h  math_utils.cpp  math_utils.h  network.cpp  network.h  pack_unpack.h  params.cpp  params.h  robot_control.cpp  robot_control.h  ss_router.cpp  ss_router.h  toolbar.cpp  toolbar.h  typedefs.h
